<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="start_visibility"
            type="Integer" />
        <variable
            name="activeMode"
            type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="?attr/activity_gradient_background">


        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photoEditorView"
            android:visibility="@{start_visibility}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/main_edit_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/undo_redo_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/main_edit_container"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="2dp"
            android:visibility="@{start_visibility}">
            <ImageView
                android:id="@+id/undoButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_go_back"
                />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/redoButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_go_forward"
                android:layout_marginEnd="32dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/main_edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:background="@color/main_edit_container_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:visibility="@{start_visibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/filtersButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_filter_button"
                app:srcCompat="@drawable/ic_filter"
                app:tint="@color/white"
                android:background="?android:selectableItemBackground"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/textButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_text_button"
                app:srcCompat="@drawable/ic_text"
                app:tint="@color/white"
                android:background="?android:selectableItemBackground"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/emojiButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_emoji_button"
                app:srcCompat="@drawable/ic_emoji"
                app:tint="@color/white"
                android:background="?android:selectableItemBackground"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/drawButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_draw_button"
                app:srcCompat="@drawable/ic_draw"
                app:tint="@color/white"
                android:background="?android:selectableItemBackground"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/eraseButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/description_erase_button"
                app:srcCompat="@drawable/ic_eraser"
                app:tint="@color/white"
                android:background="?android:selectableItemBackground"/>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/filterScrollView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/main_edit_container"
            app:layout_constraintLeft_toLeftOf="@+id/main_edit_container"
            app:layout_constraintRight_toRightOf="@+id/main_edit_container">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/item1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_none"
                    />
                <ImageView
                    android:id="@+id/item2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_none" />
                <ImageView
                    android:id="@+id/item3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_brightness" />
                <ImageView
                    android:id="@+id/item4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_contrast" />
                <ImageView
                    android:id="@+id/item5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_cross_process" />
                <ImageView
                    android:id="@+id/item6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_documentary" />
                <ImageView
                    android:id="@+id/item7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_duo_tone" />
                <ImageView
                    android:id="@+id/item8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_fill_light" />
                <ImageView
                    android:id="@+id/item9"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_fisheye" />
                <ImageView
                    android:id="@+id/item10"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_grain" />
                <ImageView
                    android:id="@+id/item11"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_gray_scale" />
                <ImageView
                    android:id="@+id/item12"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_lomish" />
                  <ImageView
                    android:id="@+id/item13"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_negative" />
                  <ImageView
                    android:id="@+id/item14"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_posterize" />
                <ImageView
                    android:id="@+id/item15"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_saturate" />
                <ImageView
                    android:id="@+id/item16"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_sepia" />

                <ImageView
                    android:id="@+id/item17"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_temperature" />
                <ImageView
                    android:id="@+id/item18"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_tint" />
                <ImageView
                    android:id="@+id/item19"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/filter_kitten_vignette" />
            </LinearLayout>
        </HorizontalScrollView>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_image_global_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_add_circle_dark_red"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>